Css/main.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400&display=swap');

*{
    box-sizing: border-box;
	font-family: 'Poppins', sans-serif;
    margin: 0px;
    padding: 0px;
}

.padLeft{
    padding: 0px 50px !important;
}

.btn.blank{
    background-color: rgb(216, 146, 216);
    color: white;
}

.btn-outline-secondary:hover{
    background-color: rgb(216, 146, 216);
}

.linkForm{
    background-color: rgb(216, 146, 216);
    border-radius: 10px;
    padding-top: 10px !important;
    padding-bottom: 10px !important;
    margin-right: 10px;
    transition: all .4s;
}

.linkForm:hover{
    color: white;
}

.navheader{
    font-weight: 600;
    font-size: 20px;
    padding: 15px;
    text-decoration: underline;
    text-decoration-color: rgb(216, 146, 216);
    text-decoration-thickness: 3px;
}

.row{
    width: 100%;
    display: flex;
    padding: 20px;
    place-items: center;
}

.oneSec{
    width: 40%;
}

.Oneimg{
    width: 100%;
    height: 500px;
}

.welcomeText{
    font-size: 20px;
}

.Secp{
    line-height: 1.5;
}

.purpleSec{
    background-color: rgb(216, 146, 216);
    height: fit-content;
    padding: 100px 40px 60px 40px;
    margin-top: -80px;
}

.thirdSec{
    margin: 30px 0px;
    text-align: center;
    padding: 10px 40px;
}

.topText{
    margin: 30px 0px 0px 0px;
}

.selectionText{
    font-weight: 500;
}

.selectionContainer{
    margin: 50px 0px;
    height: fit-content;
    padding: 40px 100px;
    background-color: whitesmoke;
    width: fit-content;
    border-radius: 10px;
    border: 1px solid lavender;
    box-shadow: 0px 0px 3px lavender;
}

.subImg{
    height: 80px;
    width: 80px;
    margin: 0px 20px 0px 0px;
}

.subRow{
    height: 120px;
}

.subName{
    margin-right: 50px;
    font-weight: normal;
}


.eachDev{
    height: fit-content;
    margin: 40px 0px 10px 0px;
    text-align: center;
}


.devImg{
    height: 200px;
    width: 175px;
}

.devName{
    font-size: 22px;
    color: rgb(155, 18, 155);
}

.socialIcons i{
    transition: all .5s;
    font-size: 25px;
    padding: 0px 20px;
    color: #686666;
}

.socialIcons i:hover{
    transform: scale(1.5);
}

.slider-dots{
    text-align: center;
    margin: 10px 0px;
    clear: left;
}

.dots{
    height: 10px;
    width: 10px;
    border-radius: 50%;
    border: 0px;
    margin: 5px;
}

.dots:hover, .active-btn{
    background-color: rgb(216, 146, 216);
}

.formBody{
    background-image: url('../media/img/alissa-de-leva-bZ_RkRKE0Po-unsplash.jpg');
    background-size: cover;
}

.loginForm{
    display: flex;
    place-content: center;
    place-items: center;
    height: 700px;
}

.formFieldset{
    padding: 40px;
    background-color: whitesmoke;
    border-width: 0px;
    border-radius: 1px;
}

.formHeader{
    font-weight: 600;
    font-size: 25px;
    margin-bottom: 30px;
    text-decoration: underline;
    text-decoration-color: rgb(216, 146, 216);
    text-decoration-thickness: 3.5px;
}

.inputPass{
    margin-right: 14.5rem;
}

.inputMail{
    margin-right: 16rem;
}

.input-icons i {
    position: absolute;
}
  
.input-icons {
    margin-bottom: 10px;
}
  
.icon {
    padding-top: 10px;
    min-width: 50px;
    text-align: center;
}
  
.input-field {
    width: 100%;
    padding: 0px 0px 0px 40px;
    height: 40px;
}

.regForm{
    margin: 7rem 0rem 7rem 0rem;
    padding: 2rem 0 2rem;
    background-color: whitesmoke;
    height: max-content;
    width: 40rem;
}

.regIcon{
    padding: 16px 0px 0px 43px;
    min-width: 50px;
    text-align: center;
}

.regInput{
    height: 40px;
    width: 17rem;
    border-color: rgb(216, 146, 216);
    border-style: groove;
    border-radius: 5px;
    margin: 5px 0px 5px 30px;
}

select.regSelect{
    border-color: rgb(216, 146, 216);
    width: fit-content;
    height: 2rem;
    margin: 0 5px 0 5px;
}


@media screen and (max-width: 610px) {
    /* SELECTION */
    .selectionContainer{
        margin: 50px 0px;
        padding: 20px 45px;
        width: min-content;
    }

    .subName{font-size: 16px;}
    .btn-outline-secondary{font-size: 14px;}
}








.hidden{
    visibility: hidden;
}

.hide{
    display: none !important;
}

.examContainer{
    background-color: whitesmoke;
    margin: 20px 20px 15px 20px;
    padding: 30px 20px 10px 20px;
    border-radius: 5px;
    min-height: 270px;
    height: fit-content;
}

.qNo{
    font-size: 15px;
    font-weight: 900;
}

.qNo::after{
    content: '. ';
}

.jumpTo{
    display: flex;
    flex-wrap: wrap;
    margin: 10px 20px 20px 20px;
}

.answered{
    box-shadow: 0px 0px 2px rgb(129 222 252) !important;
    border: 1px solid lavender !important;
    background: rgb(129 222 252) !important;
    color: white !important;
}

.qNoBtn {
    height: 35px;
    width: 35px;
    margin: 5px 5px;
    box-shadow: 0px 0px 2px rgb(216 146 216);
    border: 1px solid navajowhite;
    background: white;
    color: black;
    transition: all .5s;
}

.qNoBtn:hover {
    background-color: rgb(216 146 216);
    border: 1px solid rgb(216 146 216);
}

.eForm{
    margin: 15px 0px 0px 0px;
}

.examRadio{
    margin: 0px 0px 10px 0px;
}

#preloader{
    display: flex;
    place-content: center;
    place-items: center;
    min-height: 600px;
}

.sExam{
    padding: 10px;
    box-shadow: 0px 0px 2px rgb(216 146 216);
    border: 1px solid rgb(216, 146, 216);
    background: rgb(216, 146, 216);
    color: white;
    float: right;
    margin: 0 50px 20px 0;
}

.sExam:hover{
    opacity: .6;
    cursor: pointer;
}


.timerText{
    font-size: 25px;
    font-weight: 300;
    float: right;
    margin: 0px 40px 0px 0px;
}

.hurryUp{
    animation-name: hurry;
    animation-duration: 1s;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    color: red;
}

@keyframes hurry{
    0%{
        transform: scale(1);
    } 50% {
        transform: scale(1.2);
    } 100% {
        transform: scale(1);
    }
}

.progress-8 {
    width: 60px;
    height: 60px;
    border-radius: 50%;
    -webkit-mask: linear-gradient(0deg,#000 55%,#0000 0) bottom/100% 18.18%;
    background: linear-gradient( rgb(216, 146, 216) 0 0) bottom/100% 0% no-repeat #ddd;
    animation: p8 2s infinite steps(7);
}

@keyframes p8 {
    100% {background-size:100% 115%}
}


.historyMainText{
    margin: 25px 0px;
}

.historyCard{
    width: 60vw;
    margin: 10px 0px 20px 0px;
    border-style: ridge;
    border-radius: 10px;
    border-color: rgb(216, 146, 216);
    padding: 1rem 0;
    box-shadow: rgba(83, 83, 83, 0.295) 0px 5px 0px 3px;
}
 
.historySubject{
    text-transform: capitalize;
    float: left; 
    padding-left: 2rem;
    text-decoration: underline 5px rgb(216, 146, 216);
}

.historyDate{
    float: right; 
    padding-right: 2rem;
}

.historyallScore{
    display: flex;
    place-content: center;
}

.hiScore{
    margin: 1rem;
    padding-top: 1rem;
}

.historyNo{
    color: rgb(250, 126, 126);
}

.AIsuggest{
    margin: 0px 0px 10px 0px;
    font-weight: 300;
}

.takeExam{
    height: 30px;
    padding: 0px 10px;
    border-radius: 5px;
    border: 1px solid rgb(216, 146, 216);
    background-color: white;
    transition: .2s all;
}

.takeExam:hover{
    background-color: rgb(216, 146, 216) !important;
    color: white;
    cursor: pointer;
}

